introductory-note.html document marked up

--- a/introductory-note.html
+++ b/introductory-note.html
@@ -1,92 +1,36 @@
-
-
-
-
-
-
-Virginia Open gOVernment guide
-iv         The RepoRTeRs CommiTTee foR fReedom of The pRess
-introductory note
-The OPEn gOVErnMEnT gUiDE is a compre-
-hensive guide to open government law and practice in 
-each of the 50 states and the District of Columbia. Fifty-
-one outlines detail the rights of reporters and other citi-
-zens to see information and attend meetings of state and 
-local governments.
-The OPEn gOVErnMEnT gUiDE — previously 
-published as Tapping Officials’ Secrets — is the sole ref-
-erence on open government laws in many states.
-Written to follow a standard outline to allow easy com-
-parisons between state laws, the compendium has enabled 
-open government advocates in one state to use arguments 
-successful in other states to enhance access rights at home. 
-Press associations and lobbyists have been able to invoke 
-other sunshine laws as they seek reforms in their own.
-Volunteer attorneys, expert in open government laws in 
-each state and in Washington, D.C., generously donated 
-their time to prepare the initial outlines for the first incar-
-nation of this project in 1989. in most states these same 
-attorneys or their close associates updated and rewrote 
-the outlines for the 1993, 1997, 2001 and 2006 editions 
-as well this current 2011 edition.
-attorneys who are new to the compendium in this edi-
-tion are also experts in open government and access is-
-sues, and we are grateful to them for their willingness to 
-share in this ongoing project to create the first and only 
-detailed treatise on state open government law. The rich 
-knowledge and experience all the participating attorneys 
-bring to this project make it a success.
-While most of the initial users of this compendium 
-were journalists, we know that lawyers and citizens have 
-discovered it and find it to be indispensable as well.
-at its core, participatory democracy decries locked files 
-and closed doors. good citizens study their governors, 
-challenge the decisions they make and petition or vote for 
-change when change is needed. But no citizen can carry 
-out these responsibilities when government is secret.
-assurances of open government exist in the common 
-law, in the first state laws after colonization, in territorial 
-laws in the west and even in state constitutions. all states 
-have passed laws requiring openness, often in direct re-
-sponse to the scandals spawned by government secrecy. 
-The U.S. Congress strengthened the federal Freedom 
-of information act after Watergate, and many states fol-
-lowed suit.
-States with traditionally strong access laws include Ver-
-mont, which provides virtually unfettered access on many 
-levels; Florida, which was one of the first states to enact 
-a sunshine law; and Ohio, whose courts have issued sev-
-eral access-friendly rulings. Other jurisdictions, such as 
-Pennsylvania and the District of Columbia, have made 
-significant changes to their respective open government 
-laws since the fifth edition was published designed to 
-foster greater public access to information. Historically, 
-Pennsylvania had a reputation as being relatively non-
-transparent while the District of Columbia was known to 
-have a very restrictive open meetings law.
-Some public officials in state and local governments 
-work hard to achieve and enforce open government laws. 
-The movement toward state freedom of information 
-compliance officers reflects a growing activism for access 
-to information in the states.
-But such official disposition toward openness is excep-
-tional. Hardly a day goes by when we don’t hear that a 
-state or local government is trying to restrict access to 
-records that have traditionally been public — usually be-
-cause it is feared release of the records will violate some-
-one’s “privacy” or threaten our nation’s security.
-it is in this climate of tension between broad demo-
-cratic mandates for openness and official preference for 
-secrecy that reporters and good citizens need to garner 
-their resources to ensure the passage and success of open 
-government laws.
-The reporters Committee genuinely hopes that the 
-OPEn gOVErnMEnT gUiDE will help a vigor-
-ous press and citizenry to shape and achieve demands for 
-openness, and that it will serve as a primer for those who 
-battle in government offices and in the courts for access 
-to records and meetings. When challenges to secrecy are 
-successful, the news is better and so is the government.
-Open GOvernment Guide virGinia
-The RepoRTeRs CommiTTee foR fReedom of The pRess v
-
+<!DOCTYPE html>
+<html lang="en-us">
+  <head>
+    <meta charset="utf-8" />
+    <title>Introductory Note &#45; Virginia Open Government Guide</title>
+    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;" />
+    <link type="text/css" rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="content">
+      <header role="banner"><h1><b class="">Virginia</b> Open Government Guide</h1></header>
+      <div class="main" role="main">
+        <article role="article">
+          <section role="region">
+            <h1>Introductory Note</h1>
+            <p>The Open Government Guide is a comprehensive guide to open government law and practice in each of the 50 states and the District of Columbia. Fifty-one outlines detail the rights of reporters and other citizens to see information and attend meetings of state and local governments.</p>
+            <p>The Open Government Guide — previously published as Tapping Officials’ Secrets — is the sole reference on open government laws in many states.</p>
+            <p>Written to follow a standard outline to allow easy comparisons between state laws, the compendium has enabled open government advocates in one state to use arguments successful in other states to enhance access rights at home. Press associations and lobbyists have been able to invoke other sunshine laws as they seek reforms in their own.</p>
+            <p>Volunteer attorneys, expert in open government laws in each state and in Washington, D.C., generously donated their time to prepare the initial outlines for the first incarnation of this project in 1989. in most states these same attorneys or their close associates updated and rewrote the outlines for the 1993, 1997, 2001 and 2006 editions as well this current 2011 edition.</p>
+            <p>Attorneys who are new to the compendium in this edition are also experts in open government and access issues, and we are grateful to them for their willingness to share in this ongoing project to create the first and only detailed treatise on state open government law. The rich knowledge and experience all the participating attorneys bring to this project make it a success.</p>
+            <p>While most of the initial users of this compendium were journalists, we know that lawyers and citizens have discovered it and find it to be indispensable as well. At its core, participatory democracy decries locked files and closed doors. good citizens study their governors, challenge the decisions they make and petition or vote for change when change is needed. But no citizen can carry out these responsibilities when government is secret.</p>
+            <p>Assurances of open government exist in the common law, in the first state laws after colonization, in territorial laws in the west and even in state constitutions. all states have passed laws requiring openness, often in direct response to the scandals spawned by government secrecy. The U.S. Congress strengthened the federal Freedom of information act after Watergate, and many states followed suit.</p>
+            <p>States with traditionally strong access laws include Vermont, which provides virtually unfettered access on many levels; Florida, which was one of the first states to enact a sunshine law; and Ohio, whose courts have issued several access-friendly rulings. Other jurisdictions, such as Pennsylvania and the District of Columbia, have made significant changes to their respective open government laws since the fifth edition was published designed to foster greater public access to information. Historically, Pennsylvania had a reputation as being relatively non-transparent while the District of Columbia was known to have a very restrictive open meetings law.</p>
+            <p>Some public officials in state and local governments work hard to achieve and enforce open government laws. The movement toward state freedom of information compliance officers reflects a growing activism for access to information in the states.</p>
+            <p>But such official disposition toward openness is exceptional. Hardly a day goes by when we don’t hear that a state or local government is trying to restrict access to records that have traditionally been public — usually because it is feared release of the records will violate someone’s “privacy” or threaten our nation’s security.</p>
+            <p>It is in this climate of tension between broad democratic mandates for openness and official preference for secrecy that reporters and good citizens need to garner their resources to ensure the passage and success of open government laws.</p>
+            <p>The reporters Committee genuinely hopes that the Open Government Guide will help a vigorous press and citizenry to shape and achieve demands for openness, and that it will serve as a primer for those who battle in government offices and in the courts for access to records and meetings. When challenges to secrecy are successful, the news is better and so is the government.</p>
+          </section></article>
+        </div>
+      <footer>
+        <h3><b class="page-number">v</b> The Reporters Committee for Freedom of the Press</h3>
+        <h4><a href="users-guide.html">Next &#45; Users Guide</a></h4>
+      </footer>
+    </div>
+  </body>
+</html>
