user's guide document marked up

--- a/introductory-note.html
+++ b/introductory-note.html
@@ -29,7 +29,7 @@
         </div>
       <footer>
         <h3><b class="page-number">v</b> The Reporters Committee for Freedom of the Press</h3>
-        <h4><a href="users-guide.html">Next &#45; Users Guide</a></h4>
+        <h4><a href="users-guide.html">Next &#45; User's Guide</a></h4>
       </footer>
     </div>
   </body>
