--- a/users-guide.html
+++ b/users-guide.html
@@ -1,92 +1,37 @@
-User’s guide
-Whether you are using a guide from one state to find a 
-specific answer to an access issue, or the complete com-
-pendium encompassing all states to survey approaches to 
-a particular aspect of open government law around the 
-country, knowing a few basics on how the OPEn gOV-
-ErnMEnT gUiDE is set up will help you to get the 
-most out of it.
-Following the outline. Every state section is based on the 
-same standard outline. The outline is divided into two 
-parts: access to records and access to meetings.
-Start by reviewing the table of contents for each state. 
-it includes the first two tiers of that state’s outline. Once 
-you are familiar with the structure of the outline, finding 
-specific information is simple. Typically, the outline be-
-gins by describing the general structure of the state law, 
-then provides detailed topical listings explaining access 
-policies for specific kinds of records or meetings.
-Every state outline follows the standard outline, but 
-there will be some variations. Some contributors added 
-items within the outline, or omitted subpoints found in 
-the complete outline which were not relevant to that 
-state’s law. Each change was made to fit the needs of a 
-particular state’s laws and practices.
-in general, outline points that appear in boldface type 
-are part of the standard outline, while additional topics 
-will appear in italicized type.
-Whether you are using one state outline or any number 
-of outlines, we think you will find the outline form help-
-ful in finding specific information quickly without having 
-to read an entire statute or search through many court 
-cases. But when you do need to consult statutes, you will 
-find the complete text of the relevant portions at the end 
-of each outline.
-additional copies of individual state booklets, or of the 
-compendium covering the 50 states and the District of 
-Columbia, can be ordered from The reporters Commit-
-tee for Freedom of the Press, 1101 Wilson Blvd., Suite 
-1100, arlington, Virginia 22209, or by calling (703) 807-
-2100. The compendium is available in electronic format 
-on CD.
-The state outlines also are available on our World-Wide 
-Web site, www.rcfp.org/ogg. The internet version of the 
-outlines allows you to search the database and compare 
-the law in different states.
-Updates: The reporters Committee published new 
-editions of THE OPEn gOVErnMEnT gUiDE in 
-1989, 1993, 1997, 2001, 2006, and now in 2011. We ex-
-pect future updates to follow on approximately the same 
-schedule. if we become aware of mistakes or material 
-omissions in this work, we will post notices on this proj-
-ect’s page on our World-Wide Web site, at www.rcfp.org/
-ogg. This does not mean that the outlines will constantly 
-be updated on the site  — it simply means known errors 
-will be corrected there.
-For our many readers who are not lawyers: This book 
-is designed to help journalists, lawyers, and citizens un-
-derstand and use state open records and meetings law. 
-although the guides were written by lawyers, they are 
-designed to be useful to and readable by nonlawyers as 
-well. However, some of the elements of legal writing may 
-be unfamiliar to lay readers. a quick overview of some of 
-these customs should suffice to help you over any hurdles.
-Lawyers are trained to give a “legal citation” for most 
-statements of law. The name of a court case or number 
-of a statute may therefore be tacked on to the end of a 
-sentence. This may look like a sentence fragment, or may 
-leave you wondering if some information about that case 
-was omitted. nothing was left out; inclusion of a legal 
-citation provides a reference to the case or statute sup-
-porting the statement and provides a shorthand method 
-of identifying that authority, should you need to locate it.
-Legal citation form also indicates where the law can be 
-found in official reporters or other legal digests. Typically, 
-a cite to a court case will be followed by the volume and 
-page numbers of a legal reporter. Most state cases will be 
-found in the state reporter, a larger regional reporter, or 
-both. a case cite reading 123 a.2d 456 means the case 
-could be found in the atlantic (regional) reporter, second 
-series, volume 123, starting at page 456.
-note that the complete citation for a case is often given 
-only once. We have tried to eliminate as many cryptic 
-second-reference cites as possible, but you may encoun-
-ter cites like “Jackson at 321.” This means that the author 
-is referring you to page 321 of a case cited earlier that in-
-cludes the name Jackson. authors may also use the words 
-supra or infra to refer to a discussion of a case appearing 
-earlier or later in the outline, respectively.
-Except for these legal citation forms, most “legalese” 
-has been avoided. We hope this will make this guide more 
-accessible to everyone.
-
+<!DOCTYPE html>
+<html lang="en-us">
+  <head>
+    <meta charset="utf-8" />
+    <title>User’s Guide &#45; Virginia Open Government Guide</title>
+    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;" />
+    <link type="text/css" rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="content">
+      <header role="banner"><h1><b class="">Virginia</b> Open Government Guide</h1></header>
+      <div class="main" role="main">
+        <article role="article">
+          <section role="region">
+            <h1>User’s Guide</h1>
+            <p>Whether you are using a guide from one state to find a specific answer to an access issue, or the complete compendium encompassing all states to survey approaches to a particular aspect of open government law around the country, knowing a few basics on how the OPEN GOVERNMENT GUIDE is set up will help you to get the most out of it.</p>
+            <p>Following the outline. Every state section is based on the same standard outline. The outline is divided into two parts: access to records and access to meetings.</p>
+            <p>Start by reviewing the table of contents for each state. it includes the first two tiers of that state’s outline. Once you are familiar with the structure of the outline, finding specific information is simple. Typically, the outline begins by describing the general structure of the state law, then provides detailed topical listings explaining access policies for specific kinds of records or meetings.</p>
+            <p>Every state outline follows the standard outline, but there will be some variations. Some contributors added items within the outline, or omitted subpoints found in the complete outline which were not relevant to that state’s law. Each change was made to fit the needs of a particular state’s laws and practices.</p>
+            <p>In general, outline points that appear in boldface type are part of the standard outline, while additional topics will appear in italicized type.Whether you are using one state outline or any number of outlines, we think you will find the outline form helpful in finding specific information quickly without having to read an entire statute or search through many court cases. But when you do need to consult statutes, you will find the complete text of the relevant portions at the end of each outline.</p>
+            <p>Additional copies of individual state booklets, or of the compendium covering the 50 states and the District of Columbia, can be ordered from The reporters Committee for Freedom of the Press, 1101 Wilson Blvd., Suite 1100, arlington, Virginia 22209, or by calling (703) 807-2100. The compendium is available in electronic format on CD.</p>
+            <p><a href="www.rcfp.org/ogg">The state outlines also are available on our World-Wide Web site, www.rcfp.org/ogg</a>. The internet version of the outlines allows you to search the database and compare the law in different states.</p>
+            <p>Updates: The reporters Committee published new editions of THE OPEN GOVERNMENT GUIDE in 1989, 1993, 1997, 2001, 2006, and now in 2011. We expect future updates to follow on approximately the same schedule. If we become aware of mistakes or material omissions in this work, <a href="http://www.rcfp.org/ogg">we will post notices on this project’s page on our World-Wide Web site, at www.rcfp.org/ogg</a>. This does not mean that the outlines will constantly be updated on the site  — it simply means known errors will be corrected there.</p>
+            <p>For our many readers who are not lawyers: This book is designed to help journalists, lawyers, and citizens understand and use state open records and meetings law. Although the guides were written by lawyers, they are designed to be useful to and readable by nonlawyers as well. However, some of the elements of legal writing may be unfamiliar to lay readers. a quick overview of some of these customs should suffice to help you over any hurdles.</p>
+            <p>Lawyers are trained to give a “legal citation” for most statements of law. The name of a court case or number of a statute may therefore be tacked on to the end of a sentence. This may look like a sentence fragment, or may leave you wondering if some information about that case was omitted. nothing was left out; inclusion of a legal citation provides a reference to the case or statute supporting the statement and provides a shorthand method of identifying that authority, should you need to locate it.</p>
+            <p>Legal citation form also indicates where the law can be found in official reporters or other legal digests. Typically, a cite to a court case will be followed by the volume and page numbers of a legal reporter. Most state cases will be found in the state reporter, a larger regional reporter, or both. a case cite reading 123 a.2d 456 means the case could be found in the atlantic (regional) reporter, second series, volume 123, starting at page 456.</p>
+            <p>Note that the complete citation for a case is often given only once. We have tried to eliminate as many cryptic second-reference cites as possible, but you may encounter cites like “Jackson at 321.” This means that the author is referring you to page 321 of a case cited earlier that includes the name Jackson. authors may also use the words supra or infra to refer to a discussion of a case appearing earlier or later in the outline, respectively.</p>
+            <p>Except for these legal citation forms, most “legalese” has been avoided. We hope this will make this guide more accessible to everyone.</p>
+          </section></article>
+        </div>
+      <footer>
+        <h3><b class="page-number">v</b> The Reporters Committee for Freedom of the Press</h3>
+        <h4><a href="open-records.html">Next &#45; Open Records</a></h4>
+      </footer>
+    </div>
+  </body>
+</html>
