--- a/template.html
+++ b/template.html
@@ -8,14 +8,17 @@
   </head>
   <body>
     <div class="content">
-      <header role="banner"></header>
+      <header role="banner"><h1><b class="">Virginia</b> Open Government Guide</h1></header>
       <div class="main" role="main">
         <article role="article">
           <section role="region">
             <h1>></h1>
           </section></article>
         </div>
-      <footer></footer>
+      <footer>
+        <h3><b class="page-number">ii</b> The Reporters Committee for Freedom of the Press</h3>
+        <h4><a href="contents.html">Next &#45; Contents</a></h4>
+      </footer>
     </div>
   </body>
 </html>
