statute markedup and validated, rcfp logo added to index

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <li>Suite 1200</li>
               <li>Richmond, Virginia 23219-3095 </li>
               </ul>
-              <img src="" alt="" />
+              <img src="i/reporters-committee-for-freedom-of-the-press-rcfp-logo.png" alt="Reporters Committee for Freedom of the Press" />
               <h2>Sixth Edition</h2>
               <h2>2011</h2>
           </section></article>
